# azure-monitor-client

./: README.md  pyproject.toml
azure_monitor_client/: __init__.py  client.py
tests/: test_client.py
